--- a/news.html
+++ b/news.html
@@ -207,7 +207,7 @@
               Fast Delivery
             </h5>
             <p>
-              It is a long established fact that a reader will be distracted by
+              It is a long established fact that a reader will be distracted by sheeja
             </p>
           </div>
         </div>
